# app/Modules/Auth/Infrastructure/Providers/AuthModuleServiceProvider.php
@@ -6,10 +6,13 @@ namespace App\Modules\Auth\Infrastructure\Providers;
 
 use App\Modules\Auth\Application\Services\IssueTokenService;
 use App\Modules\Auth\Application\Services\IssueTokenServiceInterface;
+use App\Modules\Auth\Application\Services\TwoFactor\Service;
+use App\Modules\Auth\Application\Services\TwoFactor\ServiceInterface;
 use App\Modules\Auth\Infrastructure\Repositories\AuthRepository;
 use App\Modules\Auth\Infrastructure\Repositories\AuthRepositoryInterface;
 use Illuminate\Support\Facades\Route;
 use Illuminate\Support\ServiceProvider;
+use PragmaRX\Google2FA\Google2FA;
 
 class AuthModuleServiceProvider extends ServiceProvider
 {
@@ -18,6 +21,12 @@ class AuthModuleServiceProvider extends ServiceProvider
         // Bind interfaces to implementations
         $this->app->bind(AuthRepositoryInterface::class, AuthRepository::class);
         $this->app->bind(IssueTokenServiceInterface::class, IssueTokenService::class);
+        
+        // Bind 2FA service
+        $this->app->bind(ServiceInterface::class, Service::class);
+        $this->app->singleton(Google2FA::class, function () {
+            return new Google2FA();
+        });
     }
 
     public function boot(): void
